--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
           </div>
         </div>
       </nav>
+
+      <div class="container-fluid">
+        <div class="row max-height justify-content-center align-items-center">
+          <div class="col-10 mx-auto banner text-center">
+            <h1 class="text-capitalize">
+              Welocome to
+              <strong class="banner-title">Grandma's</strong>
+            </h1>
+            <a href="#store" class="btn banner-link text-uppercase my-2"
+              >explore</a
+            >
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- jquery -->
