--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
       </div>
     </header>
 
+    <section class="about py-5" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 mx-auto col-md-6 my-5">
+            <h1 class="text-capitalize">
+              about
+              <strong class="banner-title">Us</strong>
+            </h1>
+            <p class="my-4 text-muted w-75 about-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae eligendi officia et eum veritatis voluptatibus ipsum
+              debitis explicabo laudantium voluptate rem velit iure quasi
+              reprehenderit sed, id aperiam ex consequuntur?
+            </p>
+            <a href="#" class="btn btn-black text-uppercase">more</a>
+          </div>
+          <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
+            <div class="about-img_container">
+              <img src="images/sweets-1.jpeg" class="img-fluid" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- jquery -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <!-- bootstrap js -->
