--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
     <!-- icons -->
     <!--end of icons icons -->
 
-    <section id="servicex" class="services py-5">
+    <section id="services" class="services py-5">
       <div class="container">
         <div class="row">
           <!--Single Service-->
@@ -658,6 +658,131 @@
         </div>
       </div>
     </section>
+
+    <section id="cakes" class="cakes py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 mx-auto col-sm-6 text-center">
+            <h1 class="text-capitalize">
+              order
+              <strong class="banner-title"> cake </strong>
+            </h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div
+            class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-center text-capitalize"
+          >
+            <h3 class="py-3">Birthday Cake</h3>
+            <div class="text-muted">
+              <p class="my-3">birthday cake with a name</p>
+              <p class="my-3">custom ingredients</p>
+              <p class="my-3">custom size</p>
+              <p class="my-3">custom design</p>
+              <button type="button" class="btn btn-pink text-capitalize mb-3">
+                Order now
+              </button>
+              <p class="text-lowercase mb-4">starting at$5</p>
+              <img
+                src="images/trans-cake.png"
+                alt="trans-cake"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+
+          <div
+            class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-center text-capitalize"
+          >
+            <h3 class="py-3">Custom Cake</h3>
+            <div class="text-muted">
+              <p class="my-3">Custom cake with a name</p>
+              <p class="my-3">custom ingredients</p>
+              <p class="my-3">custom size</p>
+              <p class="my-3">custom design</p>
+              <button type="button" class="btn btn-pink text-capitalize mb-3">
+                Order now
+              </button>
+              <p class="text-lowercase mb-4">starting at $10</p>
+              <img
+                src="images/trans-custom.png"
+                alt="trans-custom"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+
+          <div
+            class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-center text-capitalize"
+          >
+            <h3 class="py-3">Wedding Cake</h3>
+            <div class="text-muted">
+              <p class="my-3">Wedding cake with a name</p>
+              <p class="my-3">custom ingredients</p>
+              <p class="my-3">custom size</p>
+              <p class="my-3">custom design</p>
+              <button type="button" class="btn btn-pink text-capitalize mb-3">
+                Order now
+              </button>
+              <p class="text-lowercase mb-4">starting at $15</p>
+              <img
+                src="images/trans-wedding.png"
+                alt="trans-wedding"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container-fluid">
+        <div class="col-md-6 footer py-5">
+          <h1 class="text-capitalize text-center">
+            <strong class="banner-title">Grandma's</strong>
+          </h1>
+          <div
+            class="footer-icons mt-3 d-flex justify-content-around align-items-center flex-wrap flex-lg-column"
+          >
+            <a href="#" class="footer-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="#" class="footer-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="footer-icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="footer-icon">
+              <i class="fab fa-google-plus"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 footer-contact text-center text-capitalize p-5">
+          <h3 class="mb-5">Contact</h3>
+          <p class="d-flex flex-wrap">
+            <span class="mr-4 footer-icon">
+              <i class="fas fa-map"></i>
+            </span>
+            <span>221 baker street, London</span>
+          </p>
+          <p class="d-flex flex-wrap">
+            <span class="mr-4 footer-icon">
+              <i class="fas fa-phone"></i>
+            </span>
+            <span>+91 9834905510 </span>
+          </p>
+          <p class="d-flex flex-wrap">
+            <span class="mr-4 footer-icon">
+              <i class="fas fa-envelope"></i>
+            </span>
+            <span>enolaholmes@email.com</span>
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <!-- jquery -->
     <script src="js/jquery-3.3.1.min.js"></script>
