--- a/index.html
+++ b/index.html
@@ -739,47 +739,49 @@
 
     <footer>
       <div class="container-fluid">
-        <div class="col-md-6 footer py-5">
-          <h1 class="text-capitalize text-center">
-            <strong class="banner-title">Grandma's</strong>
-          </h1>
-          <div
-            class="footer-icons mt-3 d-flex justify-content-around align-items-center flex-wrap flex-lg-column"
-          >
-            <a href="#" class="footer-icon">
-              <i class="fab fa-facebook"></i>
-            </a>
-            <a href="#" class="footer-icon">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="footer-icon">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#" class="footer-icon">
-              <i class="fab fa-google-plus"></i>
-            </a>
+        <div class="row">
+          <div class="col-md-6 footer-title footer-shop py-5">
+            <h1 class="text-capitalize text-center">
+              <strong class="banner-title">Grandma's</strong>
+            </h1>
+            <div
+              class="footer-icons mt-3 d-flex justify-content-around flex-wrap"
+            >
+              <a href="#" class="footer-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="#" class="footer-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="footer-icon">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#" class="footer-icon">
+                <i class="fab fa-google-plus"></i>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 footer-contact text-center text-capitalize p-5">
-          <h3 class="mb-5">Contact</h3>
-          <p class="d-flex flex-wrap">
-            <span class="mr-4 footer-icon">
-              <i class="fas fa-map"></i>
-            </span>
-            <span>221 baker street, London</span>
-          </p>
-          <p class="d-flex flex-wrap">
-            <span class="mr-4 footer-icon">
-              <i class="fas fa-phone"></i>
-            </span>
-            <span>+91 9834905510 </span>
-          </p>
-          <p class="d-flex flex-wrap">
-            <span class="mr-4 footer-icon">
-              <i class="fas fa-envelope"></i>
-            </span>
-            <span>enolaholmes@email.com</span>
-          </p>
+          <div class="col-md-6 footer-contact text-center text-capitalize p-5">
+            <h3 class="mb-5">Contact</h3>
+            <p class="d-flex flex-wrap">
+              <span class="mr-4 footer-icon">
+                <i class="fas fa-map"></i>
+              </span>
+              <span>221 baker street, London</span>
+            </p>
+            <p class="d-flex flex-wrap">
+              <span class="mr-4 footer-icon">
+                <i class="fas fa-phone"></i>
+              </span>
+              <span>+91 9834905510 </span>
+            </p>
+            <p class="d-flex flex-wrap">
+              <span class="mr-4 footer-icon">
+                <i class="fas fa-envelope"></i>
+              </span>
+              <span>enolaholmes@email.com</span>
+            </p>
+          </div>
         </div>
       </div>
     </footer>
